[package]
name = "twba-yt-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
twba-reqwest-backoff = { version = "0.1", git = "https://github.com/OMGeeky/twba_reqwest_backoff.git" }
twba-common = { version = "0.2", git = "https://github.com/OMGeeky/twba.common.git" }

shellexpand = "3.1"

tracing = "0.1"
tokio = { version = "1.33", features = ["rt", "rt-multi-thread", "macros"] }

thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
chrono = "0.4"
futures = "0.3"
futures-util = "0.3"

google-youtube3 = "5.0.3"
google-apis-common = "6.0.0"
strfmt = "0.2"

lazy_static = "1.4"

